--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="/css/syntax.css">
 <link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/screen.css">
 
 </head>
 <body>
